# individuals-api/src/main/java/com/tmq/individuals_api/exception/RestAdviceController.java
@@ -1,6 +1,7 @@
 package com.tmq.individuals_api.exception;
 
 import com.tmq.individuals_api.dto.ErrorResponse;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -13,8 +14,35 @@ public class RestAdviceController {
         return Mono.defer(() -> {
             ErrorResponse errorResponse = new ErrorResponse();
             errorResponse.setError(e.getMessage());
-            errorResponse.setStatus(0);
+            return Mono.just(ResponseEntity.internalServerError().body(errorResponse));
+        });
+    }
+
+    @ExceptionHandler(ValidationException.class)
+    public Mono<ResponseEntity<ErrorResponse>> handleValidationException(ValidationException e) {
+        return Mono.defer(() -> {
+            ErrorResponse errorResponse = new ErrorResponse();
+            errorResponse.setError(e.getMessage());
             return Mono.just(ResponseEntity.badRequest().body(errorResponse));
+        });
+    }
+
+    @ExceptionHandler(KeycloakException.class)
+    public Mono<ResponseEntity<ErrorResponse>> handleKeycloakException(KeycloakException e) {
+        return Mono.defer(() -> {
+            ErrorResponse errorResponse = new ErrorResponse();
+            errorResponse.setError(e.getMessage());
+
+            if (e.getMessage().contains("User exists with same email")){
+                return Mono.just(ResponseEntity.status(HttpStatus.CONFLICT).body(errorResponse));
+            }
+
+            if (e.getMessage().contains("Invalid user credentials") ||
+                    e.getMessage().contains("Invalid refresh token")) {
+                return Mono.just(ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(errorResponse));
+            }
+
+            return Mono.just(ResponseEntity.internalServerError().body(errorResponse));
         });
     }
 }
